<resources>
    <string name="app_name">Looxy Support</string>

    <string name="_0">0</string>

    <!--    space-->
    <!--    <string name="Rs" translatable="false">\u20B9&#160;</string>-->
    <!--    <string name="Rs0" translatable="false">\u20B9 0</string>-->

    <!--    without space-->
    <string name="Rs" translatable="false">\u20B9</string>
    <string name="Rs0" translatable="false">\u20B90</string>

    <string name="space" translatable="false">&#160;</string>
    <string name="dot" translatable="false">\u2022</string>

    <string name="user_list">User List</string>
    <string name="users">Users</string>
    <string name="shop_list">Shop List</string>
    <string name="shops">Shops</string>
    <string name="booking_list">Booking List</string>
    <string name="booking_data">Booking Data</string>
    <string name="bookings">Bookings</string>
    <string name="phone">Phone</string>
    <string name="no_of_bookings">No. of Bookings</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="redeem_status">Redeem Status</string>
    <string name="no_data_available">No data available</string>
    <string name="check_internet">Internet connection not available</string>
    <string name="server_error_please_try_again_after_sometime">Server Error, Please try again after sometime</string>
    <string name="loading_please_wait">Loading, Please wait…</string>
    <string name="search_user_name_phone">Search user name / phone</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_phone">Owner Phone</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="search_shop_data">Search shop data</string>
    <string name="pending">Pending</string>
    <string name="status_colon">status :</string>
    <string name="credited">credited</string>
    <string name="debited">debited</string>
    <string name="transferred">transferred</string>
    <string name="your_amount_will_reach_you_in_3_4_working_days">Your amount will reach you in 3-4 working days</string>
    <string name="rejected">Rejected</string>
    <string name="requested_on">"Requested on : "</string>
    <string name="updated_on">"Updated on : "</string>
    <string name="redeemed_status_colon">Redeemed Status :</string>
    <string name="recent_statement_colon">Recent Statement :</string>
    <string name="wallet">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="missed">Missed</string>
    <string name="slot_colon">Slot :</string>
    <string name="services">Services</string>
    <string name="stylist">Stylist</string>
    <string name="slot">Slot</string>
    <string name="amount">Amount</string>
    <string name="service_deleted">Service Deleted</string>
    <string name="total">Total</string>
    <string name="offer_applied">Offer Applied</string>
    <string name="tax_and_charges">Tax and Charges</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="to_be_paid">To be paid</string>
    <string name="user_name_unknown">User name : Unknown</string>
    <string name="user_phone_unknown">User phone : Unavailable</string>
    <string name="search_booking_data">Search Booking Data</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="last_week_users_colon">Last week users :</string>
    <string name="users_colon">Users :</string>
    <string name="total_users_colon">Total users:</string>
    <string name="last_week_shops_colon">Last week shops :</string>
    <string name="shops_colon">Shops :</string>
    <string name="total_shops_colon">Total shops :</string>
    <string name="last_week_bookings_colon">Last week bookings :</string>
    <string name="bookings_colon">Bookings :</string>
    <string name="total_bookings_colon">Total bookings :</string>
    <string name="total_online_bookings_colon">Total online bookings :</string>
    <string name="last_week_online_booking_colon">Last week online booking :</string>
    <string name="online_booking_colon">Online booking :</string>
    <string name="online_bookings">Online Bookings</string>
    <string name="total_amount">Total Amount</string>
    <string name="last_week_amount_colon">Last week amount :</string>
    <string name="amount_colon">Amount :</string>
    <string name="total_amount_colon">Total Amount :</string>
    <string name="offer_amount">Offer Amount</string>
    <string name="last_week_offer_amount_colon">Last week offer amount :</string>
    <string name="offer_amount_colon">Offer amount :</string>
    <string name="total_offer_amount_colon">Total offer amount :</string>
    <string name="money_requested">Money Requested</string>
    <string name="no_of_pending_request_colon">No. of pending request :</string>
    <string name="to_date_should_be_greater_than_start_date">To date should be greater than start date</string>
    <string name="required">Required</string>
    <string name="from_date_should_be_less_than_to_date">From date should be less than to date</string>
    <string name="requested_id">Request Id</string>
    <string name="send_money">Send Money</string>
    <string name="booking_mode">Booking Mode</string>
    <string name="reference_number">Reference Number</string>
    <string name="submit">Submit</string>
    <string name="enter_details">Enter Details</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="online_payment">Online Payment</string>
    <string name="last_week_online_amount_colon">Last week online payment :</string>
    <string name="online_amount_colon">Online payment :</string>
    <string name="total_online_payment_colon">Total online payment :</string>
    <string name="alert">Alert!</string>
    <string name="token_expired">Invalid token, you don\'t have access to use the app</string>
    <string name="go_to_login">Go to Login</string>
    <string name="ok">OK</string>
    <string name="shop_name">Shop Name</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="incentive_user_list">Incentive User List</string>
    <string name="share">Share</string>
    <string name="others">Others</string>
    <string name="notifications">Notifications</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="name">Name</string>
    <string name="phone_star">Phone *</string>
    <string name="name_star">Name *</string>
    <string name="create">Create</string>
    <string name="the_salon_and_spa_booking_app">The Salon and Spa Booking App</string>
    <string name="title_star">Title *</string>
    <string name="message">Message *</string>
    <string name="type">Type *</string>
    <string name="send">Send</string>
    <string name="assign_referral_code">Assign Referral Code</string>
    <string name="referral_code">Referral Code</string>
</resources>