<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10sp">

            <TextView
                android:id="@+id/textTitle"
                style="@style/bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/theme"
                android:padding="10sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp"
                android:gravity="center|top">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutBookingMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/booking_mode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:background="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editBookingMode"
                        style="@style/regular"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutReferenceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reference_number"
                    android:layout_marginTop="10sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:background="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editReferenceNumber"
                        style="@style/regular"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    style="@style/regular"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:id="@+id/textCancel"
                    android:background="@drawable/shape_rectangle_white_with_theme_stroke_radius10"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:text="@string/submit"
                    android:textSize="16sp"
                    android:gravity="center"
                    style="@style/bold"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:id="@+id/textSubmit"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button_theme" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>