<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/money_requested"
        android:textColor="@color/dark_grey"
        style="@style/bold"
        android:padding="10sp"
        android:layout_marginTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPendingRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:cardElevation="5sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10sp"
            android:paddingStart="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toStartOf="@+id/imgArrowMoneyRequested"
                android:layout_centerVertical="true"
                android:gravity="center|start">

                <TextView
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_pending_request_colon"
                    android:textColor="@color/grey_600"
                    android:textSize="13sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textPendingRequest"
                    style="@style/bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginStart="5sp"
                    android:textColor="@color/theme"
                    android:textSize="15sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgArrowMoneyRequested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_icon"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>